# HelloTri

./: .gitignore  CMakeLists.txt  HelloTriangle.hpp  README.md  compile.sh  main.cpp  run.sh
shaders/: shader.slang
